--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,65 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f0f0f0;
+    background-color: #93e7f6;
 }
 
-h1 {
-    color: #333;
+.container {
+    max-width: 700px;
+    margin: 40px auto;
+    padding: 40px;
+}
+
+title {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 20px;
+    
 }
 
 form {
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
+
+input[type="text"] {
+    width: 50%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #fff700;
+}
+
+button[type="submit"] {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 12px 25px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: medium;
+}
+
+button[type="submit"]:hover {
+    background-color: #3e8e41;
+}
+
+/* .weather-widget {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+} */
 
 .weather-info {
     margin-top: 20px;
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    display: inline-block;
+    text-align: center;
+}
+
+.weather-info h2 {
+    margin-top: 0;
+}
+
+.error {
+    color: red;
+    text-align: center;
+    margin-top: 20px;
 }
