"Updated app.py to pass city as cityIndex to index.html, updated index.html to use cityIndex, and modified tests in test_app.py to use follow_redirects=True and quote city name."

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
     {% endif %}
         
     <!-- Debug statements -->
-    <!--
-    <p>City input value: {{ city }}</p>
+    
+    <!-- <p>City input value: {{ cityIndex }}</p>
     <p>API key: {{ appid }}</p>
-    <p>Weather data: {{ weather|tojson }}</p>
-    -->
+    <p>Weather data: {{ weather|tojson }}</p> --> 
+   
 
     <!-- OpenWeatherMap widget --> 
     <script src='//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/d3.min.js'></script>
